# prison-gpt

./: .env.example  .gitignore  README.md  pyproject.toml
src/data/: game-1-8.csv  game-2-6-num-False.csv  game-2-6-num.csv  game-2-6.csv  game-2-7-num-False.csv  game-2-7-num-True.csv  game-3-6-num-no-bridge.csv  game-3-6-num.csv
src/messages/: decision_instruction_forget.md  decision_instruction_keep.md  message_instruction_forget.md  message_instruction_keep.md  public_good_not_provided.md  public_good_provided.md  role-1.md  role-2.md  role-3.md  role-4.md  role-5.md  role-6.md  role-7.md  system-nonum.md  system-num.md  system-splnum.md  system.md
src/messages/roles/: role-1.md  role-6.md  role-7.md
src/prison_gpt/: data_io.py  main.py  own_types.py
src/text_mining/: main.py
