[project]
name = "prison-gpt"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "2mal3", email = "56305732+2mal3@users.noreply.github.com" },
]
dependencies = [
    "openai==1.*",
    "python-dotenv==1.0.*",
    "pydantic==2.8.*",
    "textblob==0.18.*",
    "matplotlib>=3.9.1.post1",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
# Rules are explained here: https://docs.astral.sh/ruff/rules
select = ["E4", "E7", "E9", "F", "C", "N", "A", "SIM", "PL"]

[tool.rye.scripts]
dev = "python3 -m chat_prison.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/chat_prison"]
